# ICanProveIt-POC

./: docker-compose.yml  ecosystem.config.js  questions.json
api/: Dockerfile  chain.py  curd.py  helpers.py  main.py  models.py  pyproject.toml  schemas.py  sql_app.db
api-v2/: .env.example  Dockerfile  chain.py  curd.py  database.py  env.py  helpers.py  main.py  models.py  pyproject.toml  schemas.py  templates.py
api-v2/routers/: check.py  pages.py  projects.py  questions.py
app/: README.md  main.py  requirements.txt
app/flagged/: log.csv
client/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json
client-v2/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json
client-v2/src/: main.tsx  queryClient.ts
client-v2/src/components/Loader/: index.module.scss  index.tsx
client-v2/src/components/QuestionCard/: index.tsx
client-v2/src/layouts/DefaultLayout/: index.tsx
client-v2/src/models/: Base.ts  Page.ts  Project.ts  Question.ts
client-v2/src/pages/: index.module.scss  index.tsx
client-v2/src/services/: base.service.ts  page.service.ts  project.service.ts  question.service.ts
client/src/: App.module.scss  App.tsx  main.tsx
client/src/hooks/: usePdfToText.ts  useTextToQuestions.ts
client/src/models/: answer.ts  chapter.ts  project.ts  question.ts  questionAndContext.ts
client/src/pages/: index.module.scss  index.tsx
client/src/router/: index.ts
client/src/services/: chapter.service.ts  generate.service.ts  pdf.service.ts  project.service.ts
client/src/utils/: createClient.ts
labs/: chromadb.ipynb  langchain.ipynb
(+10 files in other folders)
